[package]
name = "conference_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5.0"
diesel = { version = "2.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
uuid = "1.0"
chrono = "0.4"

[dependencies.diesel_migrations]
version = "2.0"